--- a/spark_streaming/challenges/challenges.ipynb
+++ b/spark_streaming/challenges/challenges.ipynb
@@ -445,21 +445,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#"
-      ],
-      "metadata": {
-        "id": "sLOYzIRoR1Br"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Challenge 2\n",
         "\n",
         "- Run business report\n",
         "- But first, there is a bug in the system which is causing some duplicated messages, we need to exclude these lines from the report\n",
         "\n",
-        "- Technical requirements:\n",
+        "- removing duplicates logic:\n",
         "  - Identify possible duplicates on message_id, event_type and channel\n",
         "  - in case of duplicates, consider only the first message (occurrence by timestamp)\n",
         "  - Ex:\n",
@@ -472,7 +463,16 @@
         "    123        | CHAT    | CREATED    | 08:13:33\n",
         "```\n",
         "\n",
-        "\n"
+        "- After cleaning the data we're able to create the busines report\n",
+        "\n",
+        "    \n",
+        "\n",
+        "    |      date|channel|CLICKED|CREATED|OPEN|RECEIVED|SENT|\n",
+        "    +----------+-------+-------+-------+----+--------+----+\n",
+        "    |2024-12-03|    SMS|      4|      4|   1|       1|   5|\n",
+        "    |2024-12-03|   CHAT|      3|      7|   5|       8|   4|\n",
+        "    |2024-12-03|   PUSH|   NULL|      3|   4|       3|   4|\n",
+        "    ´´´\n"
       ],
       "metadata": {
         "id": "rfxIlBISSvRP"
@@ -481,46 +481,132 @@
     {
       "cell_type": "code",
       "source": [
+        "# dedup data\n",
+        "from pyspark.sql import functions as F\n",
+        "from pyspark.sql.window import Window\n",
         "df = spark.read.format(\"parquet\").load(\"content/lake/silver/messages\")\n",
-        "df.show()"
+        "dedup = df.withColumn(\"row_number\", F.row_number().over(Window.partitionBy(\"message_id\", \"event_type\", \"channel\").orderBy(\"timestamp\"))).filter(\"row_number = 1\").drop(\"row_number\")"
+      ],
+      "metadata": {
+        "id": "R3J9XyOHhqvU"
+      },
+      "execution_count": 187,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Report 1\n",
+        "  - Aggregate data by date, event_type and channel\n",
+        "  - Count number of messages\n",
+        "  - pivot event_type from rows into columns\n",
+        "  - schema expected:"
+      ],
+      "metadata": {
+        "id": "RF9L9i25lk74"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# report 1\n",
+        "report1 = dedup.groupBy(\"date\", \"channel\").pivot(\"event_type\").count()\n",
+        "report1.show()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UPHSMSXnTKgu",
-        "outputId": "105b6060-4260-4717-ad60-f815c1f8b549"
+        "outputId": "9e38fd16-fc87-4cf5-e23a-5f20c26a3922"
       },
-      "execution_count": 154,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----------+--------------------+-----+----------+--------------------+-------+-------+--------------+----------+\n",
-            "|country_id|           timestamp|value|event_type|          message_id|channel|user_id|       country|      date|\n",
-            "+----------+--------------------+-----+----------+--------------------+-------+-------+--------------+----------+\n",
-            "|      2006|2024-12-03 21:00:...|  119|  RECEIVED|bf899e5d-582e-4b0...|  EMAIL|   1000|United Kingdom|2024-12-03|\n",
-            "|      2006|2024-12-03 21:00:...|  131|  RECEIVED|dfe8f040-1f4a-42f...|  OTHER|   1008|United Kingdom|2024-12-03|\n",
-            "|      2006|2024-12-03 20:59:...|   28|   CREATED|77ee9a01-90c7-48c...|  EMAIL|   1027|United Kingdom|2024-12-03|\n",
-            "|      2006|2024-12-03 21:00:...|  132|  RECEIVED|5845fa6c-ded6-416...|   CHAT|   1014|United Kingdom|2024-12-03|\n",
-            "|      2007|2024-12-03 21:00:...|  109|   CREATED|58f825b3-7ed2-4d0...|  OTHER|   1022| United States|2024-12-03|\n",
-            "|      2007|2024-12-03 20:59:...|   66|   CREATED|79bc9ee4-6bd5-463...|   PUSH|   1004| United States|2024-12-03|\n",
-            "|      2006|2024-12-03 20:59:...|   33|   CREATED|9b12f354-ddcf-4d0...|    SMS|   1049|United Kingdom|2024-12-03|\n",
-            "|      2007|2024-12-03 21:00:...|   85|   CLICKED|25da12ba-26cb-43d...|    SMS|   1013| United States|2024-12-03|\n",
-            "|      2013|2024-12-03 20:59:...|   16|   CREATED|538c4e48-2c45-49a...|   PUSH|   1046|   South Korea|2024-12-03|\n",
-            "|      2013|2024-12-03 21:00:...|  116|   CREATED|dfe8f040-1f4a-42f...|   CHAT|   1020|   South Korea|2024-12-03|\n",
-            "|      2013|2024-12-03 20:59:...|   35|   CLICKED|8db02aec-7994-432...|   CHAT|   1024|   South Korea|2024-12-03|\n",
-            "|      2013|2024-12-03 20:59:...|   21|   CREATED|cd29b0fc-4416-428...|   PUSH|   1050|   South Korea|2024-12-03|\n",
-            "|      2015|2024-12-03 21:00:...|   80|   CREATED|d166620f-0cc0-4ae...|  OTHER|   1027|     Argentina|2024-12-03|\n",
-            "|      2015|2024-12-03 20:59:...|   39|   CLICKED|11c9806e-7a6f-462...|  EMAIL|   1048|     Argentina|2024-12-03|\n",
-            "|      2009|2024-12-03 21:00:...|  118|   CLICKED|bf899e5d-582e-4b0...|  OTHER|   1043|     Australia|2024-12-03|\n",
-            "|      2007|2024-12-03 20:59:...|   18|      OPEN|dce1b5c9-f449-4d1...|   PUSH|   1047| United States|2024-12-03|\n",
-            "|      2007|2024-12-03 20:59:...|   13|      SENT|6e8e40ff-edfe-4dc...|   PUSH|   1015| United States|2024-12-03|\n",
-            "|      2014|2024-12-03 21:00:...|  104|   CLICKED|bc1ef7ea-459b-4f7...|  OTHER|   1044|        Russia|2024-12-03|\n",
-            "|      2005|2024-12-03 20:59:...|   20|   CLICKED|9d872ba7-fb67-424...|    SMS|   1017|         Italy|2024-12-03|\n",
-            "|      2002|2024-12-03 21:00:...|   97|      SENT|ea96258f-0321-42d...|  EMAIL|   1023|         Spain|2024-12-03|\n",
-            "+----------+--------------------+-----+----------+--------------------+-------+-------+--------------+----------+\n",
+            "+----------+-------+-------+-------+----+--------+----+\n",
+            "|      date|channel|CLICKED|CREATED|OPEN|RECEIVED|SENT|\n",
+            "+----------+-------+-------+-------+----+--------+----+\n",
+            "|2024-12-03|    SMS|      4|      4|   1|       1|   5|\n",
+            "|2024-12-03|   CHAT|      3|      7|   5|       8|   4|\n",
+            "|2024-12-03|   PUSH|   NULL|      3|   4|       3|   4|\n",
+            "|2024-12-03|  OTHER|      3|      3|   4|       4|   4|\n",
+            "|2024-12-03|  EMAIL|      5|      6|   6|       4|   3|\n",
+            "+----------+-------+-------+-------+----+--------+----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Report 2\n",
+        "\n",
+        "- Identify the most active users by channel\n",
+        "- schema expected:\n",
+        "\n",
+        "```\n",
+        "+-------+----------+----+-----+-----+----+---+\n",
+        "|user_id|iterations|CHAT|EMAIL|OTHER|PUSH|SMS|\n",
+        "+-------+----------+----+-----+-----+----+---+\n",
+        "|   1022|         5|   2|    0|    1|   0|  2|\n",
+        "|   1004|         4|   1|    1|    1|   1|  0|\n",
+        "|   1013|         4|   0|    0|    2|   1|  1|\n",
+        "|   1020|         4|   2|    0|    1|   1|  0|\n",
+        "```\n",
+        "\n",
+        "Tips:\n",
+        "- Windows Functions + ??\n"
+      ],
+      "metadata": {
+        "id": "bxwOawo2lwQH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dedup.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YByUNvPUTjrv",
+        "outputId": "424dd86d-40c6-4021-b26d-5c6fa025306c"
+      },
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+--------------------+-----+----------+--------------------+-------+-------+-------------+----------+\n",
+            "|country_id|           timestamp|value|event_type|          message_id|channel|user_id|      country|      date|\n",
+            "+----------+--------------------+-----+----------+--------------------+-------+-------+-------------+----------+\n",
+            "|      2015|2024-12-03 20:59:...|   39|   CLICKED|11c9806e-7a6f-462...|  EMAIL|   1048|    Argentina|2024-12-03|\n",
+            "|      2007|2024-12-03 21:00:...|   85|   CLICKED|25da12ba-26cb-43d...|    SMS|   1013|United States|2024-12-03|\n",
+            "|      2003|2024-12-03 20:58:...|    0|  RECEIVED|25da12ba-26cb-43d...|   CHAT|   1039|      Germany|2024-12-03|\n",
+            "|      2011|2024-12-03 21:00:...|  101|      SENT|25da12ba-26cb-43d...|   CHAT|   1037|        China|2024-12-03|\n",
+            "|      2014|2024-12-03 20:58:...|    4|   CLICKED|26ac381d-aecc-4e1...|    SMS|   1011|       Russia|2024-12-03|\n",
+            "|      2002|2024-12-03 20:59:...|   32|   CREATED|26ac381d-aecc-4e1...|  EMAIL|   1048|        Spain|2024-12-03|\n",
+            "|      2012|2024-12-03 20:59:...|   68|   CREATED|3de01bc0-78f4-401...|    SMS|   1019|        India|2024-12-03|\n",
+            "|      2000|2024-12-03 21:01:...|  135|  RECEIVED|3de01bc0-78f4-401...|  EMAIL|   1025|       Brazil|2024-12-03|\n",
+            "|      2012|2024-12-03 20:59:...|   27|      SENT|3de01bc0-78f4-401...|  OTHER|   1014|        India|2024-12-03|\n",
+            "|      2001|2024-12-03 20:58:...|    1|   CREATED|3dea0a8a-5887-444...|   CHAT|   1035|     Portugal|2024-12-03|\n",
+            "|      2002|2024-12-03 21:01:...|  134|   CREATED|3dea0a8a-5887-444...|  OTHER|   1031|        Spain|2024-12-03|\n",
+            "|      2009|2024-12-03 21:00:...|  103|      OPEN|47c87abd-04c3-40a...|   CHAT|   1011|    Australia|2024-12-03|\n",
+            "|      2010|2024-12-03 21:00:...|  120|      OPEN|47c87abd-04c3-40a...|   PUSH|   1005|        Japan|2024-12-03|\n",
+            "|      2013|2024-12-03 20:58:...|   12|  RECEIVED|47c87abd-04c3-40a...|   CHAT|   1004|  South Korea|2024-12-03|\n",
+            "|      2009|2024-12-03 20:59:...|   43|      SENT|47c87abd-04c3-40a...|  EMAIL|   1041|    Australia|2024-12-03|\n",
+            "|      2009|2024-12-03 21:00:...|  121|      SENT|47c87abd-04c3-40a...|  OTHER|   1033|    Australia|2024-12-03|\n",
+            "|      2015|2024-12-03 21:00:...|   79|   CREATED|48289cf2-0b32-4ee...|    SMS|   1036|    Argentina|2024-12-03|\n",
+            "|      2013|2024-12-03 20:59:...|   51|      SENT|48289cf2-0b32-4ee...|  EMAIL|   1046|  South Korea|2024-12-03|\n",
+            "|      2005|2024-12-03 20:59:...|   29|   CLICKED|524078ea-97e4-4d1...|   CHAT|   1036|        Italy|2024-12-03|\n",
+            "|      2000|2024-12-03 20:58:...|    7|   CREATED|538c4e48-2c45-49a...|  EMAIL|   1043|       Brazil|2024-12-03|\n",
+            "+----------+--------------------+-----+----------+--------------------+-------+-------+-------------+----------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
@@ -530,91 +616,51 @@
     {
       "cell_type": "code",
       "source": [
-        "df.select(\"message_id\").distinct().count()"
+        "report2 = dedup.withColumn(\"iterations\", F.count(\"value\").over(Window.partitionBy(\"user_id\")))\n",
+        "report2 = report2.groupBy(\"user_id\", \"iterations\").pivot(\"channel\").agg(F.count(\"value\")).orderBy(\"iterations\", ascending=False)\n",
+        "report2 = report2.na.fill(0)\n",
+        "report2.show()"
       ],
       "metadata": {
+        "id": "rsS7bkAJmWsW",
+        "outputId": "39535948-fe6c-41d1-847e-1f9b8fb789fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "V1BZ7X3CUGNG",
-        "outputId": "a35fd1d6-8aeb-4d0b-8678-bd5cc05192b7"
-      },
-      "execution_count": 155,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "46"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 155
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.count()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MXbLgH6NTd0H",
-        "outputId": "09609edd-90c9-45b2-f140-926e52b01f78"
       },
-      "execution_count": 156,
+      "execution_count": 225,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "102"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 156
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 157,
-      "metadata": {
-        "id": "7fy2f1j9nWBk"
-      },
-      "outputs": [],
-      "source": [
-        "from pyspark.sql import functions as F\n",
-        "from pyspark.sql.window import Window\n",
-        "df2 = df.withColumn(\"row_number\", F.row_number().over(Window.partitionBy(\"message_id\", \"event_type\", \"channel\").orderBy(\"timestamp\"))).filter(\"row_number = 1\").drop(\"row_number\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df2.count()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iinn-KKTTe8i",
-        "outputId": "8ddd9e5b-769e-490b-be5d-1c14809229ce"
-      },
-      "execution_count": 158,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "98"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 158
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+----------+----+-----+-----+----+---+\n",
+            "|user_id|iterations|CHAT|EMAIL|OTHER|PUSH|SMS|\n",
+            "+-------+----------+----+-----+-----+----+---+\n",
+            "|   1022|         5|   2|    0|    1|   0|  2|\n",
+            "|   1004|         4|   1|    1|    1|   1|  0|\n",
+            "|   1013|         4|   0|    0|    2|   1|  1|\n",
+            "|   1020|         4|   2|    0|    1|   1|  0|\n",
+            "|   1031|         4|   1|    1|    2|   0|  0|\n",
+            "|   1043|         4|   1|    1|    1|   0|  1|\n",
+            "|   1047|         4|   1|    0|    0|   2|  1|\n",
+            "|   1011|         3|   2|    0|    0|   0|  1|\n",
+            "|   1012|         3|   1|    1|    0|   0|  1|\n",
+            "|   1027|         3|   1|    1|    1|   0|  0|\n",
+            "|   1036|         3|   1|    0|    1|   0|  1|\n",
+            "|   1038|         3|   1|    1|    1|   0|  0|\n",
+            "|   1044|         3|   1|    0|    1|   0|  1|\n",
+            "|   1049|         3|   0|    2|    0|   0|  1|\n",
+            "|   1050|         3|   0|    1|    0|   1|  1|\n",
+            "|   1000|         2|   0|    1|    0|   0|  1|\n",
+            "|   1003|         2|   0|    1|    0|   1|  0|\n",
+            "|   1005|         2|   1|    0|    0|   1|  0|\n",
+            "|   1014|         2|   1|    0|    1|   0|  0|\n",
+            "|   1017|         2|   1|    0|    0|   0|  1|\n",
+            "+-------+----------+----+-----+-----+----+---+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -622,7 +668,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YByUNvPUTjrv"
+        "id": "TbRLn2Gxp8qd"
       },
       "execution_count": null,
       "outputs": []
@@ -631,6 +677,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
